--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <p class="mb-0 ms-auto text-light fs-0 fw-normal"><i class="fas fa-phone-alt me-2"></i>Llame Ahora <a class="text-light" href="tel:0810-222-2000">0810-222-2000</a></p>
             <ul class="navbar-nav ms-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
               <li class="nav-item px-2"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="productos.html">Productos</a></li>
-              
-              <li class="nav-item px-2"><a class="nav-link" href="contacto.html">Contacto </a></li>
+              <li class="nav-item px-2"><a class="nav-link " href="productos.html">Productos</a></li>
+              <li class="nav-item px-2"><a class="nav-link " href="nosotros.html">Nosotros</a></li>
+              <li class="nav-item px-2"><a class="nav-link " href="contacto.html">Contacto</a></li>
             </ul>
             
           </div>
