carga datos de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -107,8 +107,8 @@
                               <div class="mt-n6 mt-md-0 text-center text-md-start px-md-6 px-xl-8 px-xxl-10">
                                 <h4 class="mb-0 fw-medium text-white">Diego llorden</h4>
                                 <p class="fw-normal mb-0 text-primary">Estudiante de DESARROLLADOR WEB INICIAL, en UTN - Argentina Programa 4.0.</p>
-                                <p class="card-text text-200 mt-3">“Lorem ipsum dolor sit amet consectetur adipiscing elit, accumsan cum pellentesque parturient odio velit cubilia, duis integer augue mollis ad sed. Proin magnis auctor scelerisque dui facilisi primis eu convallis per parturient vestibulum, fringilla sapien inceptos mi sem neque lobortis blandit nisl.”</p>
-                                <a href="mailto:@gmail.com&nbsp;">E-mail:@gmail.com&nbsp;</a><br>
+                                <p class="card-text text-200 mt-3">“Hola mi nombre es Diego, Soy instalador de sistemas de seguridad electronica”</p>
+                                <a href="mailto:@gmail.com&nbsp;">E-mail:dllorden@hotmail.com&nbsp;</a><br>
                                 <a href="https://api.whatsapp.com/send?phone=3516003347&text=Hola,%20¿cómo%20estás%3F">Enviame un mensaje de WhatsApp</a>
                               </div>
                             </div>
