se agrego alerta en boton cotizacion

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                     <div class="form-floating mb-3"><input class="form-control input-box form-ensurance-header-control" id="floatingEmail" type="email" placeholder="name@example.com" /><label for="floatingEmail">Email</label></div>
                     <div class="form-floating mb-3"><input class="form-control input-box form-ensurance-header-control" id="floatingCatrgory" type="text" placeholder="Insurance Category" /><label for="floatingCatrgory">Categoria de Seguro</label></div>
                     <div class="form-floating mb-3"><textarea class="form-control input-box form-ensurance-header-control" id="floatingTextarea" placeholder="Leave a comment here"></textarea><label for="floatingTextarea">Comentarios</label></div>
-                    <div class="col-12 d-grid"> <button class="btn btn-primary rounded-pill" type="submit">Obtenga su cotización</button></div>
+                    <div class="col-12 d-grid"> <button onclick="alerta()" class="btn btn-primary rounded-pill" type="submit">Obtenga su cotización</button></div>
+                   
                   </form>
                 </div>
               </div>
